--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <div class="menu-content-1">
             <h1>Creative Ink.</h1><br>
             <h2>Skilled Hands.</h2>
-            <P>The tattoo studio you’ve been waiting for
-                Open every day</P>
-            <button class="book-btn">BOOK NOW</button>
+            <P>The tattoo studio you have been waiting forOpen every day</P>
+            <a href="#Contact">
+                <button id="book-btn" class="book-btn">BOOK NOW</button>
+            </a>
         </div>
-        <button id="toggleButton"><strong>>>></strong></button>
     </section>
 
 
